lecture/antlr/OpenSCAD/OpenSCAD2Parser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OpenSCAD2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, INCLUDE_DECL=20, USE_DECL=21, MODULE=22, FUNCTION=23, 
		IF=24, ELSE=25, TRUE=26, FALSE=27, UNDEF=28, LT=29, LE=30, GT=31, GE=32, 
		EQ=33, NE=34, AND=35, OR=36, NOT=37, CUBE=38, SPHERE=39, CYLINDER=40, 
		POLYHEDRON=41, SCALE=42, RESIZE=43, ROTATE=44, TRANSLATE=45, MIRROR=46, 
		MULTMATRIX=47, COLOR=48, MINKOWSKI=49, HULL=50, UNION=51, DIFFERENCE=52, 
		INTERSECTION=53, RENDER=54, MODIFIER=55, NUMBER=56, IDENTIFIER=57, STRING=58, 
		WHITESPACE=59, C_COMMENT=60, LINE_COMMENT=61;
	public static final int
		RULE_prog = 0, RULE_input = 1, RULE_unit = 2, RULE_definition = 3, RULE_statement = 4, 
		RULE_block = 5, RULE_primitive_solid = 6, RULE_for_loop = 7, RULE_intersection_for = 8, 
		RULE_assign = 9, RULE_ifelse = 10, RULE_assignment = 11, RULE_module_instantiation = 12, 
		RULE_module_definition = 13, RULE_function_definition = 14, RULE_expr = 15, 
		RULE_function_call = 16, RULE_arg_decl = 17, RULE_arg_call_list = 18, 
		RULE_arg_call = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "input", "unit", "definition", "statement", "block", "primitive_solid", 
			"for_loop", "intersection_for", "assign", "ifelse", "assignment", "module_instantiation", 
			"module_definition", "function_definition", "expr", "function_call", 
			"arg_decl", "arg_call_list", "arg_call"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'{'", "'}'", "'('", "')'", "'for'", "'intersection_for'", 
			"'assign'", "'='", "','", "'?'", "':'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'['", "']'", null, null, "'module'", "'function'", "'if'", "'else'", 
			"'true'", "'false'", "'undef'", "'<'", "'<='", "'>'", "'>='", "'=='", 
			"'!='", "'&&'", "'||'", "'!'", "'cube'", "'sphere'", "'cylinder'", "'polyhedron'", 
			"'scale'", "'resize'", "'rotate'", "'translate'", "'mirror'", "'multmatrix'", 
			"'color'", "'minkowski'", "'hull'", "'union'", "'difference'", "'intersection'", 
			"'render'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "INCLUDE_DECL", "USE_DECL", 
			"MODULE", "FUNCTION", "IF", "ELSE", "TRUE", "FALSE", "UNDEF", "LT", "LE", 
			"GT", "GE", "EQ", "NE", "AND", "OR", "NOT", "CUBE", "SPHERE", "CYLINDER", 
			"POLYHEDRON", "SCALE", "RESIZE", "ROTATE", "TRANSLATE", "MIRROR", "MULTMATRIX", 
			"COLOR", "MINKOWSKI", "HULL", "UNION", "DIFFERENCE", "INTERSECTION", 
			"RENDER", "MODIFIER", "NUMBER", "IDENTIFIER", "STRING", "WHITESPACE", 
			"C_COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OpenSCAD2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public List<InputContext> input() {
			return getRuleContexts(InputContext.class);
		}
		public InputContext input(int i) {
			return getRuleContext(InputContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 216172507268383174L) != 0) {
				{
				{
				setState(40);
				input();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InputContext extends ParserRuleContext {
		public TerminalNode INCLUDE_DECL() { return getToken(OpenSCAD2Parser.INCLUDE_DECL, 0); }
		public TerminalNode USE_DECL() { return getToken(OpenSCAD2Parser.USE_DECL, 0); }
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitInput(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_input);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INCLUDE_DECL:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(INCLUDE_DECL);
				}
				break;
			case USE_DECL:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				match(USE_DECL);
				}
				break;
			case T__0:
			case T__1:
			case T__5:
			case T__6:
			case T__7:
			case MODULE:
			case FUNCTION:
			case IF:
			case CUBE:
			case SPHERE:
			case CYLINDER:
			case POLYHEDRON:
			case SCALE:
			case RESIZE:
			case ROTATE:
			case TRANSLATE:
			case MIRROR:
			case MULTMATRIX:
			case COLOR:
			case MINKOWSKI:
			case HULL:
			case UNION:
			case DIFFERENCE:
			case INTERSECTION:
			case RENDER:
			case MODIFIER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				unit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnitContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitUnit(this);
		}
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_unit);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODULE:
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				definition();
				}
				break;
			case T__0:
			case T__1:
			case T__5:
			case T__6:
			case T__7:
			case IF:
			case CUBE:
			case SPHERE:
			case CYLINDER:
			case POLYHEDRON:
			case SCALE:
			case RESIZE:
			case ROTATE:
			case TRANSLATE:
			case MIRROR:
			case MULTMATRIX:
			case COLOR:
			case MINKOWSKI:
			case HULL:
			case UNION:
			case DIFFERENCE:
			case INTERSECTION:
			case RENDER:
			case MODIFIER:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Module_definitionContext module_definition() {
			return getRuleContext(Module_definitionContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODULE:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				module_definition();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				function_definition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Primitive_solidContext primitive_solid() {
			return getRuleContext(Primitive_solidContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public Intersection_forContext intersection_for() {
			return getRuleContext(Intersection_forContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public IfelseContext ifelse() {
			return getRuleContext(IfelseContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Module_instantiationContext module_instantiation() {
			return getRuleContext(Module_instantiationContext.class,0);
		}
		public TerminalNode MODIFIER() { return getToken(OpenSCAD2Parser.MODIFIER, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		int _la;
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				primitive_solid();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				for_loop();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				intersection_for();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(63);
				assign();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(64);
				ifelse();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(65);
				assignment();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MODIFIER) {
					{
					setState(66);
					match(MODIFIER);
					}
				}

				setState(69);
				module_instantiation();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(70);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<UnitContext> unit() {
			return getRuleContexts(UnitContext.class);
		}
		public UnitContext unit(int i) {
			return getRuleContext(UnitContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__1);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 216172507265237446L) != 0) {
				{
				{
				setState(74);
				unit();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Primitive_solidContext extends ParserRuleContext {
		public Arg_call_listContext arg_call_list() {
			return getRuleContext(Arg_call_listContext.class,0);
		}
		public TerminalNode CUBE() { return getToken(OpenSCAD2Parser.CUBE, 0); }
		public TerminalNode SPHERE() { return getToken(OpenSCAD2Parser.SPHERE, 0); }
		public TerminalNode CYLINDER() { return getToken(OpenSCAD2Parser.CYLINDER, 0); }
		public TerminalNode POLYHEDRON() { return getToken(OpenSCAD2Parser.POLYHEDRON, 0); }
		public TerminalNode MODIFIER() { return getToken(OpenSCAD2Parser.MODIFIER, 0); }
		public Primitive_solidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_solid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterPrimitive_solid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitPrimitive_solid(this);
		}
	}

	public final Primitive_solidContext primitive_solid() throws RecognitionException {
		Primitive_solidContext _localctx = new Primitive_solidContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_primitive_solid);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MODIFIER) {
				{
				setState(82);
				match(MODIFIER);
				}
			}

			setState(85);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 4123168604160L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(86);
			match(T__3);
			setState(87);
			arg_call_list();
			setState(88);
			match(T__4);
			setState(89);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class For_loopContext extends ParserRuleContext {
		public Arg_call_listContext arg_call_list() {
			return getRuleContext(Arg_call_listContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterFor_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitFor_loop(this);
		}
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_for_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__5);
			setState(92);
			match(T__3);
			setState(93);
			arg_call_list();
			setState(94);
			match(T__4);
			setState(95);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Intersection_forContext extends ParserRuleContext {
		public Arg_call_listContext arg_call_list() {
			return getRuleContext(Arg_call_listContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Intersection_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intersection_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterIntersection_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitIntersection_for(this);
		}
	}

	public final Intersection_forContext intersection_for() throws RecognitionException {
		Intersection_forContext _localctx = new Intersection_forContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_intersection_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__6);
			setState(98);
			match(T__3);
			setState(99);
			arg_call_list();
			setState(100);
			match(T__4);
			setState(101);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public Arg_call_listContext arg_call_list() {
			return getRuleContext(Arg_call_listContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__7);
			setState(104);
			match(T__3);
			setState(105);
			arg_call_list();
			setState(106);
			match(T__4);
			setState(107);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfelseContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(OpenSCAD2Parser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(OpenSCAD2Parser.ELSE, 0); }
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterIfelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitIfelse(this);
		}
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifelse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(IF);
			setState(110);
			match(T__3);
			setState(111);
			expr(0);
			setState(112);
			match(T__4);
			setState(113);
			statement();
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(114);
				match(ELSE);
				setState(115);
				statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(OpenSCAD2Parser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OpenSCAD2Listener ) ((OpenSCAD2Listener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(IDENTIFIER);
			setState(119);
			match(T__8);
			setState(120);
			expr(0);
			setState(121);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
